--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -20,7 +20,7 @@
     <div id="content">
         {{- block "main" . }}{{- end }}
     </div>
-    <div class="fixed-bottom">
+    <div class="fixed-bottom light">
     {{- partial "sections/footer/index.html" . -}}
 
     </div>
