--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -6,12 +6,10 @@
 <!-- Fonts -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link
-    href="https://fonts.googleapis.com/css2?family=Alata&family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-    rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Alata&family=League+Spartan:wght@100;400&family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
 
 <!-- font configuration -->
-<link rel="stylesheet" href="{{ .Site.Params.staticPath }}/css/font.css" media="all">
+<link rel="stylesheet" href="css/font.css" media="all">
 
 <!-- Internal templates -->
 {{ template "_internal/google_analytics_async.html" . }}
