added redox-build-part-1 post and other tweaks

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -20,9 +20,8 @@
     <div id="content">
         {{- block "main" . }}{{- end }}
     </div>
-    <div class="fixed-bottom light">
-    {{- partial "sections/footer/index.html" . -}}
-
+    <div class="footer light">
+        {{- partial "sections/footer/index.html" . -}}
     </div>
     {{- partial "scripts.html" . -}}
 </div>
