--- a/static/css/font.css
+++ b/static/css/font.css
@@ -5,6 +5,15 @@ body {
     font-weight: 100;
 }
 
+p{
+    font-size: 20px;
+    font-weight: 100;
+}
+
+a{
+    font-weight: 400;
+}
+
 /* secondary font */
 .secondary-font, #secondary-font {
     font-family: "Lora", serif;
