updated bootstrap and fixed home

--- a/layouts/partials/sections/hero/index.html
+++ b/layouts/partials/sections/hero/index.html
@@ -1,11 +1,11 @@
 {{ if .Site.Params.hero.enable | default false }}
-<section id="hero" class="my-5 py-5 m-auto align-middle">
+<section id="hero" class="pb-5 m-auto align-middle">
     <div class="container px-3 px-sm-5 px-md-5 px-lg-5 pt-lg-3">
         <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-8 content" id="primary-font">
-                <span class="subtitle">
+                <p class="hero-content">
                     {{ .Site.Params.hero.intro }}
-                </span>
+                </p>
                 <h2>
                     {{ .Site.Params.hero.title }}
                 </h2>
