--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -9,22 +9,16 @@
     </title>
 </head>
 
-<body class="light" onload="loading()">
+<body class="d-flex flex-column light min-vh-100" onload="loading()">
     <!-- javascripts -->
     <!-- <script src="/js/jquery-3.6.0.min.js"></script> -->
     <script src="{{ .Site.Params.staticPath }}/bootstrap-5/js/bootstrap.bundle.js"></script>
-    <div class="min-vh-100 mb-0">
-
-    
     {{- partial "sections/header.html" . -}}
-    <div id="content">
+    <div id="content" class="flex-grow-1">
         {{- block "main" . }}{{- end }}
     </div>
-    <div class="footer light">
-        {{- partial "sections/footer/index.html" . -}}
-    </div>
+    {{- partial "sections/footer/index.html" . -}}
     {{- partial "scripts.html" . -}}
-</div>
 </body>
 
 </html>
