--- a/layouts/partials/sections/footer/copyright.html
+++ b/layouts/partials/sections/footer/copyright.html
@@ -1,4 +1,4 @@
-<div class="container py-2">
+<div class="container">
     <div class="row justify-content-center">
         <div class="col-md-4 text-center">
             <div class="pb-1">
