--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -6,10 +6,21 @@
 <!-- Fonts -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Alata&family=League+Spartan:wght@100;400&family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+<link
+    href="https://fonts.googleapis.com/css2?family=Alata&family=League+Spartan:wght@100;400&family=Roboto:wght@100;300;400;500;700;900&display=swap"
+    rel="stylesheet">
 
 <!-- Internal templates -->
-{{ template "_internal/google_analytics_async.html" . }}
+<!-- {{ template "_internal/google_analytics_async.html" . }} -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-003501BJ0L"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-003501BJ0L');
+</script>
 {{ template "_internal/opengraph.html" . }}
 {{ template "_internal/twitter_cards.html" . }}
 
@@ -25,25 +36,135 @@
 
 <style>
     :root {
-        --text-color: {{ .Site.Params.color.textColor | default "#343a40" }};
-        --text-secondary-color: {{ .Site.Params.color.secondaryTextColor | default "#6c757d" }};
-        --background-color: {{ .Site.Params.color.backgroundColor | default "#eaedf0" }};
-        --secondary-background-color: {{ .Site.Params.color.secondaryBackgroundColor | default "#64ffda1a" }};
-        --primary-color: {{ .Site.Params.color.primaryColor | default "#007bff" }};
-        --secondary-color: {{ .Site.Params.color.secondaryColor | default "#f8f9fa" }};
+        --text-color: {
+                {
+                .Site.Params.color.textColor | default "#343a40"
+            }
+        }
+
+        ;
+
+        --text-secondary-color: {
+                {
+                .Site.Params.color.secondaryTextColor | default "#6c757d"
+            }
+        }
+
+        ;
+
+        --background-color: {
+                {
+                .Site.Params.color.backgroundColor | default "#eaedf0"
+            }
+        }
+
+        ;
+
+        --secondary-background-color: {
+                {
+                .Site.Params.color.secondaryBackgroundColor | default "#64ffda1a"
+            }
+        }
+
+        ;
+
+        --primary-color: {
+                {
+                .Site.Params.color.primaryColor | default "#007bff"
+            }
+        }
+
+        ;
+
+        --secondary-color: {
+                {
+                .Site.Params.color.secondaryColor | default "#f8f9fa"
+            }
+        }
+
+        ;
 
         /* dark mode colors */
-        --text-color-dark: {{ .Site.Params.color.darkmode.textColor | default "#e4e6eb" }};
-        --text-secondary-color-dark: {{ .Site.Params.color.darkmode.secondaryTextColor | default "#b0b3b8" }};
-        --background-color-dark: {{ .Site.Params.color.darkmode.backgroundColor | default "#18191a" }};
-        --secondary-background-color-dark: {{ .Site.Params.color.darkmode.secondaryBackgroundColor | default "#212529" }};
-        --primary-color-dark: {{ .Site.Params.color.darkmode.primaryColor | default "#ffffff" }};
-        --secondary-color-dark: {{ .Site.Params.color.darkmode.secondaryColor | default "#212529" }};
+        --text-color-dark: {
+                {
+                .Site.Params.color.darkmode.textColor | default "#e4e6eb"
+            }
+        }
+
+        ;
+
+        --text-secondary-color-dark: {
+                {
+                .Site.Params.color.darkmode.secondaryTextColor | default "#b0b3b8"
+            }
+        }
+
+        ;
+
+        --background-color-dark: {
+                {
+                .Site.Params.color.darkmode.backgroundColor | default "#18191a"
+            }
+        }
+
+        ;
+
+        --secondary-background-color-dark: {
+                {
+                .Site.Params.color.darkmode.secondaryBackgroundColor | default "#212529"
+            }
+        }
+
+        ;
+
+        --primary-color-dark: {
+                {
+                .Site.Params.color.darkmode.primaryColor | default "#ffffff"
+            }
+        }
+
+        ;
+
+        --secondary-color-dark: {
+                {
+                .Site.Params.color.darkmode.secondaryColor | default "#212529"
+            }
+        }
+
+        ;
     }
+
     body {
-        font-size: {{ .Site.Params.font.fontSize | default "1rem" }};
-        font-weight: {{ .Site.Params.font.fontWeight | default "400" }};
-        line-height: {{ .Site.Params.font.lineHeight | default "1.5" }};
-        text-align: {{ .Site.Params.font.textAlign | default "left" }};
+        font-size: {
+                {
+                .Site.Params.font.fontSize | default "1rem"
+            }
+        }
+
+        ;
+
+        font-weight: {
+                {
+                .Site.Params.font.fontWeight | default "400"
+            }
+        }
+
+        ;
+
+        line-height: {
+                {
+                .Site.Params.font.lineHeight | default "1.5"
+            }
+        }
+
+        ;
+
+        text-align: {
+                {
+                .Site.Params.font.textAlign | default "left"
+            }
+        }
+
+        ;
     }
 </style>
